styles.css
/*COLOR PALETTE
dark blue - #0E3B43
myrtle green - #357266
blueishgrey -#A3BBAD
brown - #65532F
dark brown - #312509
*/

/*GENERAL*/

* {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

*:focus {
  outline: none;
}

body {
  color: white;
  background-color: rgb(208, 208, 208); 
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

h1 {
  margin: 0;
}

h2 {
  color: white;
  font-size: 10px;
  font-weight: 400;
  fill: currentColor;
  margin: 0;
  transition: all ease .3s;
}

.icon {
  font-size: 40px;
  margin-bottom: 10px;
  transition: all ease .3s;
 }

 /*BUTTON STYLING*/
 
 button {
  background: none;
  border: 2px solid white;
  color: white;
  padding: 7px 14px;
  margin-right: 10px;
  transition: all ease .3s;
 }
 
 .icon-button {
  font-size: .8em;
  margin: 0 3px;
 }

/*GRID*/

.container {
  display: grid;
  margin: 10px auto;
  max-width: 1300px;
  max-height: 710px; 
  height: 54vw;
  width: 97%;
  grid-template-columns: 1fr 1fr 1fr 2fr;
  grid-template-rows: 1fr 1fr 1fr;
  grid-template-areas: 
    "header header profile photo"
    "experience education blog photo"
    "social contact sic-beats photo";
}

.grid-item {
  background-size: cover;
  display: grid;
  padding: 25px;
}

.item-container {
  margin: auto;
  text-align: center;
}

.header-container {
  text-align: left;
}

.main {
  background: #357266;
  grid-area: header;
}

.profile {
  background: #65532F;
  grid-area: profile;
}

.experience {
  background-color: #0E3B43;
  grid-area: experience;
}

.education {
  background-color:#A3BBAD;
  grid-area: education;
}

.blog {
  background-color: #357266;
  grid-area: blog;
}

.social {
  background-color: #312509;
  grid-area: social;
}

.contact {
  background-color: #0E3B43;
  grid-area: contact;
}

.sic-beats {
  background-color: #A3BBAD;
  grid-area: sic-beats;
}

.photo {
  display: grid;
  grid-area: photo;
  position: relative;
}

/*PHOTO SCROLLER*/

.slider{
  display: flex;
  overflow-x: auto;
  scroll-snap-points-x: repeat(inherit);
  scroll-snap-type: mandatory;
}

.slide {
  height: 100%;
  flex-shrink: 0;
  width: 100%;
  transition: all ease 1s;
}

.slide-1 {
  background-image: url("images/carter3.jpg");
  background-size: cover;
}

.slide-2 {
  background-image: url("images/carter2.jpg");
  background-size: cover;
}

.slide-3 {
  background-image: url("images/carter1.jpg");
  background-size: cover;
}

.slide-button {
  background-color: white;
  border-radius: 50%;
  position: absolute;
  top: 6px;
  height: 9px;
  opacity: 1;
  width: 9px;
  list-style-type: none;
  z-index: 1;
}

.slide-button-1 {
  right: 36px
}

.slide-button-2 {
  right: 23px
}

.slide-button-3 {
  right: 10px
}

.photo a:active{
  opacity: 1;
}

.arrow {
  position: absolute;
  top: 47%;
  background-color: rgb(65, 65, 65);
  color: lightgrey;
  opacity: .7;
  border: 2px solid lightgray;
  padding: 12px;
  border-radius: 50%;
  transition: all ease .3s;
}

.arrow-left {
  left: 2%;
}

.arrow-right {
  right: 2%;
}

.noDisplay {
  display: none;
}

.buttonNoHighlight {
  opacity: .6;
}

/*HOVER EFFECTS*/

button:hover {
  cursor: pointer;
  transform: scale(1.05);
}

.item-container:hover .icon{
  transform: scale(1.1);
  cursor: pointer;
}

.item-container:hover h2 {
  transform: scale(1.1);
  cursor: pointer;
}

.arrow:hover {
  background-color: lightgray;  
  color: rgb(65, 65, 65);
  border-color: rgb(65, 65, 65);
  transform: scale(1.2);
  cursor: pointer;
}

/*IPAD SIZING*/

@media screen and (min-width: 760px) and (max-width: 1100px) {
  .container{
    width: 760px;
    height: auto;
    max-height: none;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
    grid-template-areas: 
      "header photo photo"
      "header photo photo"
      "profile photo photo"
      "experience education blog"
      "social contact sic-beats";
    }

    .header-button {
      margin: 12px;
      width: 80%;
      font-size: 15px;
    }

    .grid-item h2 {
      padding-bottom: 70px;
    }

    .grid-item i { 
      padding-top: 70px
    }
    
    #icon-button-1,
    #icon-button-2 {
      padding-top: 5px;
      width: 80%
    }

    .header-container {
      text-align: center;
      font-size: 21px;
      margin: 0;
    }

    .main {
      background: #357266;
      grid-area: header;
      padding: 10px;
    }

    h1 {
      margin-top: 20px;
      font-size: 50px;
    }
}
 /*MOBILE SIZING*/

 @media screen and (max-width: 760px) {
  .container{
    width: 96%;
    max-width: 380px;
    grid-template-columns: 1fr;
    grid-template-rows: 160px 488px repeat(7, 110px);
    grid-template-areas: 
      "header"
      "photo"
      "profile"
      "experience" 
      "blog"
      "education" 
      "contact"
      "social" 
      "sic-beats";
     }

    .grid-item {
      padding: 0;
    }

    .grid-item h2,
    .grid-item i {
      padding: 0;
    }

    .icon-button {
      padding-top: 7px;
    }

    .header-button {
      margin: 12px;
      width: 40%;
      font-size: 8px;
    }

    .header-container {
      text-align: center;
      font-size: 11px;
      margin: 0 10px;
    }

    h1 {
     margin-top: 10px;
     font-size: 25px;
    }
}

